# advent-of-code

./: .gitignore  .gitmodules  README.md  getinput.sh  mkday.sh  mkgif.sh  mkmp4.sh  runall.sh  runallbuilt.sh
.github/workflows/: rust.yml  year2022.yml
2016/01/: Cargo.toml  main.rs
2016/02/: Cargo.toml  main.rs
2016/03/: Cargo.toml  main.rs
2016/04/: Cargo.toml  main.rs
2017/: Cargo.toml  README.md  mkday.sh
2017/01/: Cargo.toml  main.rs
2017/02/: Cargo.toml  main.rs
2017/03/: Cargo.toml  main.rs
2017/04/: Cargo.toml  main.rs
2017/05/: Cargo.toml  main.rs
2017/06/: main.rs
2017/07/: main.rs
2017/08/: Cargo.toml  main.rs
2017/09/: Cargo.toml  main.rs
2017/10/: main.rs
2017/11/: Cargo.toml  main.rs
2017/12/: Cargo.toml  main.rs
2017/13/: main.rs
2017/14/: main.rs
2017/15/: Cargo.toml  main.rs
2017/16/: Cargo.toml  main.rs
2017/17/: main.rs
2017/18/: Cargo.toml  main.rs
2017/19/: Cargo.toml  main.rs
2017/20/: Cargo.toml  main.rs
2017/21/: Cargo.toml  main.rs
2017/22/: Cargo.toml  main.rs
2017/23/: .#input.txt  Cargo.toml  main.rs
2017/24/: Cargo.toml  main.rs
2017/25/: Cargo.toml  main.rs
2017/template/: Cargo.toml
2018/: Cargo.toml  README.md
2018/03/: 1.rs  2.rs
2018/06/: 1.rs
2018/09/: 2.rs
2018/10/: 1.rs
2018/11/: 1.rs
2018/12/: 2.rs
2019/: .gitignore  Cargo.toml  README.md  mkday.sh
2019/intcode/: Cargo.toml
2019/intcode/examples/: compiler.rs  debug.rs  debug_tui.rs
2019/intcode/src/: cling.rs  debugger.rs  lib.rs  machine.rs  tui_debugger.rs
2020/: Cargo.toml
2021/: Cargo.toml  README.md  mkday.sh
2022/: .gitignore  README.md  getinput.sh  mkday.sh
2022/12/: Cargo.toml  main.rs
2022/18/: Cargo.toml  main.rs
2022/18/template/: Cargo.toml  main.rs
2024/: Cargo.toml
2025/08/: Cargo.toml  main.rs
aoc/: Cargo.toml
aoc/examples/: astar.rs  grid.rs  hexgrid.rs  path_finding.rs  transforms.rs
aoc/src/: asciiset.rs  lib.rs
template/: Cargo.toml  Cargo.toml.template  main.rs
(+394 files in other folders)
