[package]
name = 'aoc'
version = '0.0.1'
edition = '2021'

[dependencies]
num = "0.4.3"
serde_scan = "0.4.1"
mod_exp = "1.0.1"
lazy_static = "1.5.0"
petgraph = "0.6.5"
itertools = "0.13.0"
regex = "1.11.1"
image = "0.25.5"
fnv = "1.0.7"
rustc-hash = "2.1.0"
smallvec = "1.13.2"

[dependencies.pancurses]
version = "0.17"
features = ["win32"]

[dependencies.vecmath]
version = "1.0.0"

[[example]]
name = "grid"
path = "examples/grid.rs"
