[package]
name = 'day12'
version = '0.0.1'
edition = '2021'

[dependencies]
aoc = {path = "../../aoc"}
kiss3d = { version = "0.35.0", optional = true }
image = { version = "0.24.5", optional = true }
rand = "0.8.5"
rayon = "1.6.1"

[[bin]]
name = 'day12'
path = 'main.rs'

[features]
vis = ["dep:kiss3d", "dep:image"]