[package]
name = 'day18'
version = '0.0.1'
edition = '2021'

[dependencies]
aoc = {path = "../../aoc"}
parse-display = "0.6.0"
kiss3d = { version = "0.35.0", optional = true }
image = { version = "0.24.5", optional = true }

[[bin]]
name = 'day18'
path = 'main.rs'

[features]
vis = ["dep:kiss3d", "dep:image"]
