[package]
name = 'day08'
version = '0.0.1'
edition = '2024'

[dependencies]
aoc = {path = "../../aoc"}
parse-display = "0.10.0"
regex = "1.12.2"
kiss3d = { version = "0.37.2", optional = true }
futures = { version = "0.3.31", optional = true }

[[bin]]
name = 'day08'
path = 'main.rs'

[features]
vis = ["dep:kiss3d", "dep:futures"]
